--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^3.0.0-beta.6",
+    "gsap": "^3.12.2",
     "react": "^18.2.0",
+    "react-aos": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
